0.4.15/_sources/api/napari.layers.Surface.rst
napari.layers.Surface
=====================

.. currentmodule:: napari.layers

.. autoclass:: Surface
   :members:
   :show-inheritance:
   :inherited-members:

   

   
   .. rubric:: Methods

   .. autosummary::
   
   
   
      ~Surface.as_layer_data_tuple
   
   
      ~Surface.bind_key
   
   
      ~Surface.block_update_properties
   
   
      ~Surface.click_plane_from_click_data
   
   
      ~Surface.create
   
   
      ~Surface.data_to_world
   
   
      ~Surface.get_ray_intersections
   
   
      ~Surface.get_status
   
   
      ~Surface.get_value
   
   
      ~Surface.projected_distance_from_mouse_drag
   
   
      ~Surface.refresh
   
   
      ~Surface.reset_contrast_limits
   
   
      ~Surface.reset_contrast_limits_range
   
   
      ~Surface.save
   
   
      ~Surface.set_view_slice
   
   
      ~Surface.world_to_data
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Surface.affine
      ~Surface.blending
      ~Surface.class_keymap
      ~Surface.colormap
      ~Surface.colormaps
      ~Surface.contrast_limits
      ~Surface.contrast_limits_range
      ~Surface.cursor
      ~Surface.cursor_size
      ~Surface.data
      ~Surface.dtype
      ~Surface.editable
      ~Surface.experimental_clipping_planes
      ~Surface.extent
      ~Surface.faces
      ~Surface.gamma
      ~Surface.help
      ~Surface.interactive
      ~Surface.loaded
      ~Surface.metadata
      ~Surface.name
      ~Surface.ndim
      ~Surface.opacity
      ~Surface.rotate
      ~Surface.scale
      ~Surface.shading
      ~Surface.shear
      ~Surface.source
      ~Surface.thumbnail
      ~Surface.translate
      ~Surface.translate_grid
      ~Surface.vertex_values
      ~Surface.vertices
      ~Surface.visible
      ~Surface.mouse_move_callbacks
      ~Surface.mouse_wheel_callbacks
      ~Surface.mouse_drag_callbacks
      ~Surface.mouse_double_click_callbacks
   
   

   .. rubric:: Details